--- a/styless/b11-a1.css
+++ b/styless/b11-a1.css
@@ -143,6 +143,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 80px;
+    margin-top: 80px;
 }
 .description-content {
     width: 1280px;
@@ -169,7 +170,6 @@
 
 .description-desc {
 color: rgba(14, 14, 14, 0.8);
-
 font-size: 16px;
 font-weight: 400;
 line-height: 24px;
@@ -279,10 +279,12 @@ background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     margin-bottom: 80px;
+    background-color: #d5f5e3;
 }
 
 .news-content {
     width: 1280px;
+    padding: 60px;
 }
 
 .news-title {
@@ -320,7 +322,7 @@ background-repeat: no-repeat;
 }
 
 .news-secondary-1 {
-    width: 1280px;
+    width: 1100px;
     height: 402px;
     /* Auto layout */
     display: flex;
@@ -331,6 +333,7 @@ background-repeat: no-repeat;
     padding: 48px;
     border-radius: 24px;
     background: rgb(255, 255, 255);
+    margin: 30px;
 }
 
 .news-title-secondary {
@@ -351,7 +354,7 @@ background-repeat: no-repeat;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 12px;
-    padding: 0px;
+    
 }
 .news-img-box {
     width: 134px;
